<resources>
    <string name="app_name">GetYourDrug</string>
    <string name="title_activity_recherche">Rechercher médicament</string>
    <string name="search">Search</string>
    <string name="title_activity_reserve">Réserver Médicament</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Adresse Email non valide</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Champ obligatoire</string>
    <string name="error_over_stock">Quantité non disponible</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="medicament">Médicament</string>
    <string name="pharmacie">Pharmacie</string>
    <string name="quantite">Quantité</string>
    <string name="dateAchat">Date d\'achat</string>
    <string name="reserver">Réserver</string>
    <string name="title_activity_login">Sign in</string>
    <string name="s_authentifier">S\'authentifier</string>
    <string name="create_account">Vous n\'êtes pas inscrits? Créez votre compte</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="signin_account">Vous avez déjà un compte? S\'authentifier</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="cin">CIN</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="telephone">Téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="title_activity_utilisateur">Get Your Drug</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rechercher_medicament">Rechercher médicament</string>
    <string name="mes_reservations">Mes réservations</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="date_de_reservation">Date de réservation</string>
    <string name="title_activity_update_reservation">Modifier Réservation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rechercher">RechercherActivity</string>
</resources>
