<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_height="150dp"/>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/red_rect"
                    android:padding="5dp"
                    android:layout_marginStart="20dp">

                    <!--<ImageView
                        android:layout_marginLeft="8dp"
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_pin" />-->

                    <com.example.youssef.getyourdrug.customfonts.MyTextView_Roboto_Medium
                        android:id="@+id/medicament"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medicament"
                        android:textColor="#fff"
                        android:textSize="10dp"
                        android:layout_marginStart="5dp"
                        tools:ignore="SpUsage" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp">

                <com.example.youssef.getyourdrug.customfonts.MyTextView_Roboto_Medium
                    android:id="@+id/pharmacie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pharmacie"
                    android:textColor="#606674"
                    android:textSize="14dp"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="13dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="13dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!--<ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_bed" />-->

                    <com.example.youssef.getyourdrug.customfonts.MyTextView_Roboto_Regular
                        android:id="@+id/quantite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/quantite"
                        android:textColor="#adb3c0"
                        android:textSize="12dp"
                        android:layout_marginStart="5dp"
                        tools:ignore="SpUsage" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!--<ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_shower" />-->

                    <com.example.youssef.getyourdrug.customfonts.MyTextView_Roboto_Regular
                        android:id="@+id/dateReservation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="2018-01-01"
                        android:textColor="#adb3c0"
                        android:textSize="12dp"
                        android:layout_marginStart="5dp"
                        tools:ignore="SpUsage" />

                </LinearLayout>

                <!--<LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_square" />

                    <com.example.youssef.getyourdrug.customfonts.MyTextView_Roboto_Regular
                        android:id="@+id/sqft"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="2100 sqft"
                        android:textColor="#adb3c0"
                        android:textSize="12dp"
                        android:layout_marginStart="5dp"
                        tools:ignore="SpUsage" />

                </LinearLayout>-->

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
